--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-android'
     id 'kotlin-android-extensions'
+    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
 }
 
 android {
     compileSdk 32
-
     defaultConfig {
         applicationId "com.example.class3_1"
         minSdk 21
@@ -33,6 +33,14 @@ android {
     }
 }
 
+buildFeatures {
+    compose = true
+}
+
+composeOptions {
+    kotlinCompilerExtensionVersion = "1.2.0"
+}
+
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.8.0'
@@ -43,4 +51,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation "androidx.activity:activity-compose:1.5.1"
+    implementation "androidx.compose.foundation:foundation:1.3.0-alpha02"
+    implementation "androidx.compose.runtime:runtime-livedata:1.3.0-alpha02"
+    implementation 'androidx.compose.material:material:1.2.0'
 }
